test/ll_parser_bracketed_command_test.test
ERROR: in line 11: too few quoted names in:
parser define bracket "[+"
^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: in line 12: expected quoted name after:
parser define bracket "[+" ...
                           ^^^
parser print selectors:
    [ - parser, + code ]
parser define selector text
parser define selector code
parser define selector math
parser define selector operator 1
parser print selectors:
    [ - parser, + code, - text, - math, - operator1 ]
parser define bracket "(" ... ")" [code, math, text]
parser define bracket "[" ... "]" [code, math, text]
parser print bracket "[" ... "]":
    block standard: [code, text, math]
    block TOP-LEVEL: [parser]
parser print bracket "[" ... "]"
parser define gluing indentation mark ":" ... ";" [code, math, text]
ERROR: in line 23: unrecognized flag name:
parser define bracket "[+" ... "+]" [text, operator 2]
                                           ^^^^^^^^^^
ERROR: in line 24: expected `,' after:
parser define bracket "<+" ... "+>" [text + operator]
                                     ^^^^
parser define bracket "<+" ... "+>" [code, operator 1]
       with parsing selectors [^ code, - math, + operator 1]
       with full lines
======= TEST: parser test "abcdef"
======= TEST: parser test :
                  "abc"
                  "def"

parser trace [ + subexpression lines,
               + subexpression elements]
======= TEST: parser test <+hi there+> <+hi [ embedded ] there+>
------- line 37:
parser test <+ hi there +> <+ hi [embedded] there +>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 37:
parser test <+ hi there +> <+ hi [embedded] there +>
            ^^^^^^^^^^^^^^
------- line 37:
parser test <+ hi there +> <+ hi [embedded] there +>
                           ^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
parser define bracket "[X" ... "X]" [code, operator 1]
       with parsing selectors [- code, + operator 1]
======= TEST: parser test [a [b c] c] [X a [ b c ] d X]
------- line 40:
parser test [ a [ b c ] c ] [X a [ b c ] d X]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 40:
parser test [ a [ b c ] c ] [X a [ b c ] d X]
            ^^^^^^^^^^^^^^^
------- line 40:
parser test [ a [ b c ] c ] [X a [ b c ] d X]
                ^^^^^^^
------- line 40:
parser test [ a [ b c ] c ] [X a [ b c ] d X]
                            ^^^^^^^^^^^^^^^^^
======= END TEST
======= TEST: parser test this is a paragraph + :
                  line 1
                  line 2 a :: line 2 b;   line 2 c
                  last line

------- lines 41-44:
parser test this is a paragraph +:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- lines 41-44:
parser test this is a paragraph +:
                                 ^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- line 42:
    line 1
    ^^^^^^
------- line 43:
    line 2a:: line 2b; line 2c
    ^^^^^^^^^^^^^^^^^^
------- line 43:
    line 2a:: line 2b; line 2c
                       ^^^^^^^
------- line 44:
    last line
    ^^^^^^^^^
======= END TEST
parser define indentation mark "+:" ... "::" [code]
======= TEST: parser test this is a paragraph +:
                  line 1
                  line 2 a::   line 2 b ; line 2 c
                  last line

------- lines 46-49:
parser test this is a paragraph +:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- lines 46-49:
parser test this is a paragraph +:
                                ^^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- line 47:
    line 1
    ^^^^^^
------- line 48:
    line 2a:: line 2b; line 2c
    ^^^^^^^^^
------- line 48:
    line 2a:: line 2b; line 2c
              ^^^^^^^^^^^^^^^^
------- line 49:
    last line
    ^^^^^^^^^
======= END TEST
======= TEST: parser test < X | hi there | X >
------- line 50:
parser test  <X| hi there |X>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
parser define named bracket
    "<" ... "#" ... "|" ... "|" ... ">" [code]
======= TEST: parser test <X| hi there |>
------- line 53:
parser test  <X| hi there |X>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 53:
parser test  <X| hi there |X>
             ^^^^^^^^^^^^^^^^
======= END TEST
======= TEST: parser test <foo bar| hi <p> there |>
------- line 54:
parser test  <foo bar| hi <p> there |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 54:
parser test  <foo bar| hi <p> there |>
             ^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 54:
parser test  <foo bar| hi <p> there |>
                          ^^^
======= END TEST
======= TEST: parser test <X Y Z # 8| ho ho |>
------- line 55:
parser test  <X Y Z # 8| ho ho |X>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 55:
parser test  <X Y Z # 8| ho ho |X>
             ^^^^^^^^^^^^^^^^^^^^^
======= END TEST
ERROR: missing named closing bracket "|>" inserted; line 56:
parser test  <X Y Z # 8| ho ho |X Y Z # 8>
                                          ^
======= TEST: parser test <X Y Z # 8| ho ho | X Y Z # 8 > |>
------- line 56:
parser test  <X Y Z # 8| ho ho |X Y Z # 8>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 56:
parser test  <X Y Z # 8| ho ho |X Y Z # 8>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
ERROR: missing named closing bracket "|>" inserted; line 57:
parser test  <X Y Z : 8| ho ho |X Y Z : 8>
                                          ^
======= TEST: parser test <X Y Z ":" "8" | ho ho | X Y Z : 8 > |>
------- line 57:
parser test  <X Y Z : 8| ho ho |X Y Z : 8>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 57:
parser test  <X Y Z : 8| ho ho |X Y Z : 8>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
======= TEST: parser test <X Y Z # 8 # 8.64T| ho ho |>
------- line 58:
parser test  <X Y Z # 8 # 8.64 T| ho ho |X Y>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 58:
parser test  <X Y Z # 8 # 8.64 T| ho ho |X Y>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
======= TEST: parser test <X Y Z (foo , bar) | ho ho |>
------- line 59:
parser test  <X Y Z (foo, bar)| ho ho |X Y>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 59:
parser test  <X Y Z (foo, bar)| ho ho |X Y>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
ERROR: missing named closing bracket "|>" inserted; line 60:
parser test  <X Y Z (foo, bar)| ho ho |X Y Z (foo, bar)>
                                                        ^
======= TEST: parser test
               <X Y Z (foo , bar) | ho ho | X Y Z (foo , bar) > |>
------- line 60:
parser test  <X Y Z (foo, bar)| ho ho |X Y Z (foo, bar)>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 60:
parser test  <X Y Z (foo, bar)| ho ho |X Y Z (foo, bar)>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 60:
parser test  <X Y Z (foo, bar)| ho ho |X Y Z (foo, bar)>
                                             ^^^^^^^^^^
======= END TEST
======= TEST: parser test <X| hi there |>
------- line 61:
parser test  <X| hi there |X>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 61:
parser test  <X| hi there |X>
             ^^^^^^^^^^^^^^^^
======= END TEST
parser undefine named bracket
    "<" ... "#" ... "|" ... "|" ... ">" [code]
======= TEST: parser test < X | hi there | X >
------- line 64:
parser test  <X| hi there |X>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
ERROR: in line 65: unrecognized flag name:
parser trace [+ foo]
                ^^^
parser trace [+ parser commands]
parser trace [+ parser commands]
parser trace [+ warnings]
parser begin block 1
parser define bracket "<*" ... "*>" [code]
======= TEST: parser test <*hi there A*>
------- line 72:
parser test <* hi there A *>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 72:
parser test <* hi there A *>
            ^^^^^^^^^^^^^^^^
======= END TEST
ERROR: in line 73: innermost block name does not match `block x':
parser end block x
^^^^^^^^^^^^^^^^^^
======= TEST: parser test <*hi there B*>
------- line 74:
parser test <* hi there B *>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 74:
parser test <* hi there B *>
            ^^^^^^^^^^^^^^^^
======= END TEST
parser end block 1
======= TEST: parser test <* hi there C *>
------- line 76:
parser test <* hi there C *>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
ERROR: in line 77: innermost block name does not match `block1':
parser end block 1
^^^^^^^^^^^^^^^^^^
parser define bracket "<|" ... "|>" [code]
======= TEST: parser test <|hi there D|>
------- line 79:
parser test <| hi there D |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 79:
parser test <| hi there D |>
            ^^^^^^^^^^^^^^^^
======= END TEST
parser begin block 1
parser undefine bracket "<|" ... "|>" [code]
======= TEST: parser test <| hi there E |>
------- line 82:
parser test <| hi there E |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
WARNING: in line 83: undefine found no definition:
parser undefine bracket "<|" ... "|>" [code]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
parser undefine bracket "<|" ... "|>" [code]
parser end block 1
======= TEST: parser test <|hi there F|>
------- line 85:
parser test <| hi there F |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 85:
parser test <| hi there F |>
            ^^^^^^^^^^^^^^^^
======= END TEST
parser undefine bracket "<|" ... "|>" [code]
======= TEST: parser test <| hi there F |>
------- line 87:
parser test <| hi there F |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
WARNING: in line 88: undefine found no definition:
parser undefine bracket "<|" ... "|>" [code]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
parser undefine bracket "<|" ... "|>" [code]
parser define bracket "`" ... "'" [code]
parser define bracket "```" ... "'''" [code]
       with full lines
======= TEST: parser test (```)''')
------- line 93:
parser test ( ``` ) ''' )
^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 93:
parser test ( ``` ) ''' )
            ^^^^^^^^^^^^^
------- line 93:
parser test ( ``` ) ''' )
              ^^^^^^^^^
======= END TEST
======= TEST: parser test (```)''')
------- lines 94-96:
parser test ( ```
^^^^^^^^^^^^^^^^^
)
^
''' )
^^^^^
------- lines 94-96:
parser test ( ```
            ^^^^^
)
^
''' )
^^^^^
------- lines 94-96:
parser test ( ```
              ^^^
)
^
''' )
^^^
======= END TEST
ERROR: missing closing bracket "'" inserted before ")"; line 97:
parser test ( ` ) ' )
                ^
======= TEST: parser test (`') ' )
------- line 97:
parser test ( ` ) ' )
^^^^^^^^^^^^^^^^^^^^^
------- line 97:
parser test ( ` ) ' )
            ^^^^^
------- line 97:
parser test ( ` ) ' )
              ^
======= END TEST
ERROR: missing closing bracket "'" inserted before end of line; line 98:
parser test ( `
               ^
ERROR: missing closing bracket ")" inserted before end of line; line 98:
parser test ( `
               ^
======= TEST: parser test (`')
------- line 98:
parser test ( `
^^^^^^^^^^^^^^^
------- line 98:
parser test ( `
            ^^^
------- line 98:
parser test ( `
              ^
======= END TEST
parser begin block 1
parser define indent offset 4
ERROR: lexeme indent 1 too near paragraph indent 0; line 105:
 line with indent 1
 ^^^^
ERROR: lexeme indent 2 too near paragraph indent 0; line 107:
  line with indent 2
  ^^^^
parser end block 1
ERROR: lexeme indent 1 too near paragraph indent 0; line 113:
 line with indent 1
 ^^^^
